# isidore

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
design/: INCREMENTAL_V1.md  PCP_SEAMS.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
src/isidore/: __init__.py  changeset.py  claims.py  cli.py  contracts.py  detectors.py  export.py  findings.py  graph.py  home.py  humanpack.py  impact.py  journal.py  knowledge.py  langspec.py  llm.py  pcp.py  pipeline.py  pyramid.py  qa.py  reconcile.py  render.py  toon.py  verify.py
tests/: test_changeset.py  test_claims.py  test_connectors_f1.py  test_contracts.py  test_detectors.py  test_export.py  test_humanpack.py  test_impact.py  test_knowledge.py  test_langspec.py  test_mcp_barrier.py  test_pcp_pipeline.py  test_pcp_seams.py  test_pipeline.py  test_pyramid.py  test_qa.py  test_reconcile.py  test_residue.py  test_security_prose.py  test_units.py  test_verify.py  test_wiki_dir_env.py
wiki/: .isidore-state.json  claims.toon  findings.toon  index.toon  quickstart.md  src-isidore.md  src-isidore.md.cert.json  tests-test_claims_py.md  tests-test_claims_py.md.cert.json  tests-test_connectors_f1_py.md  tests-test_connectors_f1_py.md.cert.json  tests-test_langspec_py.md  tests-test_langspec_py.md.cert.json  tests-test_pcp_seams_py.md  tests-test_pcp_seams_py.md.cert.json  tests-test_pipeline_py.md  tests-test_pipeline_py.md.cert.json  tests-test_security_prose_py.md  tests-test_security_prose_py.md.cert.json  tests-test_units_py.md  tests-test_units_py.md.cert.json
(+14 files in other folders)
