[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isidore-wiki"
version = "0.1.0"
description = "Compile an agent-oriented wiki from your codebase's structure graph — one bounded LLM call per page, deterministic everything else."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Gred In Labs" }]
keywords = ["documentation", "wiki", "agents", "ai", "llm", "ast", "knowledge-graph"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]

[project.scripts]
isidore = "isidore.cli:main"

[project.urls]
Repository = "https://github.com/GredInLabsTechnologies/isidore"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
src = ["src", "tests"]
